# kmediaplayer

./: CMakeLists.txt  README  index.docbook  kmediaplayer.desktop  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
